[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/themes/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends MenuButton


func _ready():
	get_popup().connect('id_pressed', self, '_on_item_pressed')
	var id = SaveData.load_data(\"res://configurations/windowSettings.dat\")
	get_popup().set_item_checked(id, true)
	text = get_popup().get_item_text(id)

func _on_item_pressed(id):
	
	for i in range(0, get_popup().get_item_count()):
		get_popup().set_item_checked(i, false)
	get_popup().set_item_checked(id, true)
	text = get_popup().get_item_text(id)
	resize_screen(id)
	SaveData.save_data(\"res://configurations/windowSettings.dat\", int(id))
	
			
		
func resize_screen(id):
	match id:
		0:
			OS.window_size = Vector2(1980, 1080)
			OS.window_position = (OS.get_screen_size() / 2) - OS.window_size / 2

		1:
			OS.window_size = Vector2(1680,1050)
			OS.window_position = (OS.get_screen_size() / 2) - OS.window_size / 2


		2:
			OS.window_size = Vector2(1280,1024)
			OS.window_position = (OS.get_screen_size() / 2) - OS.window_size / 2

		3:
			OS.window_size = Vector2(1440,900)
			OS.window_position = (OS.get_screen_size() / 2) - OS.window_size / 2

		4:
			OS.window_size = Vector2(1280,800)
			OS.window_position = (OS.get_screen_size() / 2) - OS.window_size / 2

		5:
			OS.window_size = Vector2(1280,720)
			OS.window_position = (OS.get_screen_size() / 2) - OS.window_size / 2

		6:
			OS.window_size = Vector2(1024,768)
			OS.window_position = (OS.get_screen_size() / 2) - OS.window_size / 2

		7:
			OS.window_size = Vector2(800,600)
			OS.window_position = (OS.get_screen_size() / 2) - OS.window_size / 2

	ProjectSettings.set_setting('display/window/size/width', OS.window_size.x)
	ProjectSettings.set_setting('display/window/size/height', OS.window_size.y)
	ProjectSettings.save()
"

[sub_resource type="GDScript" id=2]
script/source = "extends CheckBox


func _ready():
	if pressed:
		text = 'ON'
	else:
		text = 'OFF'


func _on_CheckBox_pressed():
	if pressed:
		text = 'ON'
	else:
		text = 'OFF'
"

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 316.0
margin_top = 249.0
margin_right = 484.0
margin_bottom = 350.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PlayGame" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 31.0
text = "play game"
flat = true

[node name="Settings" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 168.0
margin_bottom = 66.0
text = "settings"
flat = true

[node name="QuitGame" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 168.0
margin_bottom = 101.0
text = "quit game"
flat = true

[node name="CenterContainer2" type="CenterContainer" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/CenterContainer2"]
margin_left = 50.0
margin_top = 50.0
margin_right = 750.0
margin_bottom = 550.0
rect_min_size = Vector2( 700, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Control/CenterContainer2/Panel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -239.0
margin_right = 239.0
custom_constants/vseparation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer2/Panel/GridContainer"]
margin_right = 446.0
margin_bottom = 64.0

[node name="GridContainer" type="GridContainer" parent="Control/CenterContainer2/Panel/GridContainer/HBoxContainer"]
margin_right = 446.0
margin_bottom = 64.0
custom_constants/vseparation = 0
custom_constants/hseparation = 250
columns = 2

[node name="ScreenSize" type="Label" parent="Control/CenterContainer2/Panel/GridContainer/HBoxContainer/GridContainer"]
margin_top = 3.0
margin_right = 164.0
margin_bottom = 28.0
text = "Screen Size"

[node name="MenuButton" type="MenuButton" parent="Control/CenterContainer2/Panel/GridContainer/HBoxContainer/GridContainer"]
margin_left = 414.0
margin_right = 446.0
margin_bottom = 31.0
text = "0"
expand_icon = true
items = [ "1980x1080", null, 2, false, false, 0, 0, null, "", false, "1680x1050", null, 2, false, false, 1, 0, null, "", false, "1280x1024", null, 2, false, false, 2, 0, null, "", false, "1440x900", null, 2, false, false, 3, 0, null, "", false, "1280x800", null, 2, false, false, 4, 0, null, "", false, "1280x720", null, 2, false, false, 5, 0, null, "", false, "1024x768", null, 2, false, false, 6, 0, null, "", false, "800x600", null, 2, false, false, 7, 0, null, "", false ]
switch_on_hover = true
script = SubResource( 1 )

[node name="Fullscreen" type="Label" parent="Control/CenterContainer2/Panel/GridContainer/HBoxContainer/GridContainer"]
margin_top = 35.0
margin_right = 164.0
margin_bottom = 60.0
text = "Full Screen"

[node name="CheckBox" type="CheckBox" parent="Control/CenterContainer2/Panel/GridContainer/HBoxContainer/GridContainer"]
margin_left = 414.0
margin_top = 31.0
margin_right = 446.0
margin_bottom = 64.0
align = 1
script = SubResource( 2 )

[node name="SettingsBack" type="Button" parent="Control/CenterContainer2/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -31.0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/PlayGame" to="." method="_on_PlayGame_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
[connection signal="pressed" from="Control/CenterContainer2/Panel/GridContainer/HBoxContainer/GridContainer/CheckBox" to="Control/CenterContainer2/Panel/GridContainer/HBoxContainer/GridContainer/CheckBox" method="_on_CheckBox_pressed"]
[connection signal="pressed" from="Control/CenterContainer2/Panel/SettingsBack" to="." method="_on_SettingsBack_pressed"]
